add delete dialog
