# src/docs/openApi.yaml
@@ -141,6 +141,35 @@ paths:
         500:
           description: Server error.
 
+  /use-cases/mark-as-deleted:
+    post:
+      security:
+        - bearerAuth: []
+      tags:
+        - UseCases
+      summary: Delete messages for user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - companionId
+              properties:
+                companionId:
+                  type: string
+                  format: uuid
+                  description: ID of the conversation companion
+                  example: "123e4567-e89b-12d3-a456-426614174000"
+      responses:
+        200:
+          description: Delete message succes.
+        401:
+          description: Not authorized.
+        500:
+          description: Server error.
+
 components:
   securitySchemes:
     bearerAuth:
