# src/use_cases/routes.ts
@@ -1,8 +1,9 @@
 import * as express from "express";
 
-import { findAllUser, searchUserAndGroup } from "./controller";
+import { findAllUser, markAsDeleted, searchUserAndGroup } from "./controller";
 import { authMiddleware } from "../middlewares/auth.middeleware";
 
 export const useСases: express.IRouter = express.Router();
 useСases.get("/find-all", findAllUser);
 useСases.get("/search", authMiddleware, searchUserAndGroup);
+useСases.post("/mark-as-deleted", authMiddleware, markAsDeleted);
